# ramp

./: .firebaserc  .gitignore  README.md  firebase-guides.md  firebase.json  pyproject.toml
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
src/ramp/: __init__.py  __main__.py  cli.py
tests/: __init__.py  test_cli.py
